deployment_strategies_14-03-2026/shadow/mirror-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: kubeflow
  labels:
    app: nginx-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-proxy
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
        - name: exporter
          image: nginx/nginx-prometheus-exporter:1.0
          args:
            - -nginx.scrape-uri=http://localhost:8080/stub_status
          ports:
            - name: mnist-port # Match the port name here
              containerPort: 9113
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: tmp
              mountPath: /tmp
            - name: log
              mountPath: /var/log/nginx
            - name: nginx-cache
              mountPath: /var/cache/nginx
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      volumes:
        - name: config
          configMap:
            name: mirror-proxy-config
        - name: tmp
          emptyDir: {}
        - name: log
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
---
# Public endpoint for mirrored traffic
apiVersion: v1
kind: Service
metadata:
  name: digits-server-mirrored
  namespace: kubeflow
  labels:
    app: mirror-proxy
spec:
  selector:
    app: nginx-proxy
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
# Internal service to reach stable pods (canary-digits-server)
# Selects pods from your existing canary-digits-server InferenceService
apiVersion: v1
kind: Service
metadata:
  name: stable-digits-internal
  namespace: kubeflow
  labels:
    app: stable-digits-internal
spec:
  selector:
    serving.kserve.io/inferenceservice: canary-digits-server
  ports:
    - name: http
      port: 8686
      targetPort: 8686
      protocol: TCP
---
# Internal service to reach shadow pods
apiVersion: v1
kind: Service
metadata:
  name: shadow-digits-internal
  namespace: kubeflow
  labels:
    app: shadow-digits-internal
spec:
  selector:
    serving.kserve.io/inferenceservice: shadow-digits-server
  ports:
    - name: http
      port: 8686
      targetPort: 8686
      protocol: TCP
