deployment_strategies_14-03-2026/shadow/network.yaml
# allow-prometheus-scrape.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape-shadow
  namespace: kubeflow
spec:
  podSelector: {}

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring  # adjust to your prometheus namespace
  - from:
    - podSelector: {}
    ports:
    - port: 8686
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 80
      protocol: TCP
